--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,10 @@
 # Smith — Standalone Remote Agent for Morpheus
 #
 # Usage:
-#   1. Initialize config (first time only):
-#      docker compose run --rm smith node bin/smith.js init --name my-smith
-#
-#   2. Edit the generated config:
-#      Edit /root/.smith/config.yaml (mounted from host)
-#
-#   3. Start:
-#      docker compose up -d
-#
-#   4. Check status:
-#      docker compose exec smith node bin/smith.js status
-#
-#   5. View logs:
-#      docker compose logs -f smith
+#   1. Copy .env.example to .env and fill in the values
+#   2. Start:  docker compose up -d
+#   3. Status: docker compose exec smith node bin/smith.js status
+#   4. Logs:   docker compose logs -f smith
 
 services:
   smith:
@@ -24,12 +14,29 @@ services:
     ports:
       - "${SMITH_PORT:-7900}:7900"
     volumes:
-      # Persist config, logs, and browser cache across restarts
-      - ./config:/root/.smith
+      # Persist logs and browser cache across restarts
+      - smith-data:/root/.smith
       # Mount a workspace directory for Smith to operate on
       - ${SMITH_WORKSPACE:-./workspace}:/workspace
     environment:
       - SMITH_HOME=/root/.smith
       - NODE_ENV=production
-    # Override sandbox_dir to the mounted workspace inside the container
-    # (edit config/config.yaml after init to set sandbox_dir: /workspace)
+      # ─── Required ───
+      - SMITH_NAME=${SMITH_NAME:-smith}
+      - SMITH_PORT=${SMITH_PORT:-7900}
+      - SMITH_SANDBOX_DIR=${SMITH_SANDBOX_DIR:-/workspace}
+      # ─── Auth (optional — auto-generated if omitted, use smith init to persist) ───
+      - SMITH_AUTH_TOKEN=${SMITH_AUTH_TOKEN:-}
+      # ─── Security (optional) ───
+      - SMITH_READONLY_MODE=${SMITH_READONLY_MODE:-false}
+      - SMITH_ENABLE_FILESYSTEM=${SMITH_ENABLE_FILESYSTEM:-true}
+      - SMITH_ENABLE_SHELL=${SMITH_ENABLE_SHELL:-true}
+      - SMITH_ENABLE_GIT=${SMITH_ENABLE_GIT:-true}
+      - SMITH_ENABLE_NETWORK=${SMITH_ENABLE_NETWORK:-true}
+      - SMITH_ALLOWED_SHELL_COMMANDS=${SMITH_ALLOWED_SHELL_COMMANDS:-}
+      # ─── Tuning (optional) ───
+      - SMITH_TIMEOUT_MS=${SMITH_TIMEOUT_MS:-30000}
+      - SMITH_LOG_LEVEL=${SMITH_LOG_LEVEL:-info}
+
+volumes:
+  smith-data:
