--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "prepare": "npm run build",
+    "prepublishOnly": "npm run build",
     "start": "node bin/smith.js start",
     "dev": "tsx watch src/index.ts",
     "test": "vitest"
