--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "dependencies": {
     "@langchain/core": "^1.1.18",
+    "@mozilla/readability": "^0.6.0",
     "@puppeteer/browsers": "^2.4.0",
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
     "fs-extra": "^11.3.3",
     "glob": "^11.0.0",
     "js-yaml": "^4.1.1",
+    "jsdom": "^28.1.0",
     "puppeteer-core": "^23.11.1",
     "ws": "^8.19.0",
     "zod": "^4.3.6"
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
     "@types/js-yaml": "^4.0.9",
+    "@types/jsdom": "^28.0.0",
     "@types/node": "^22.16.6",
     "@types/ws": "^8.18.1",
     "tsx": "^4.19.0",
