--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "glob": "^11.0.0",
     "js-yaml": "^4.1.1",
     "jsdom": "^28.1.0",
+    "morpheus-devkit": "^1.0.0",
     "puppeteer-core": "^23.11.1",
     "ws": "^8.19.0",
     "zod": "^4.3.6"
